--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.js"></script>
   <script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins-ui.js"></script>
   <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
-  <script type="text/javascript" src="scripts/helloworld.js"></script>
+  <script type="text/javascript" src="pluginCode.js"></script>
 </head>
 <body>
 </body>
